--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -236,6 +236,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@color/black"
             android:gravity="bottom">
 
 <!--            <androidx.appcompat.widget.AppCompatImageView-->
@@ -252,13 +253,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivGift"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:src="@drawable/joy_icon_gift"
             android:layout_marginEnd="12dp" />
     </LinearLayout>
-
-
 
     <io.agora.scene.joy.widget.NonInterceptingRecyclerView
         android:id="@+id/rvMessage"
