[FT-1126]fix showTo1v1 slide bug

--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/bg_app_def_white">
@@ -39,7 +38,8 @@
         android:id="@+id/title_view"
         style="@style/title_view"
         app:ctv_centerText="@string/show_to1v1_name"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <io.agora.scene.showTo1v1.ui.view.RoomListGuideView
         android:id="@+id/vGuidance"
