[Android]fix merge bug

--- a/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
@@ -28,6 +28,7 @@
         android:textSize="16sp"
         android:textColor="@color/red_e0"
         android:text="@string/app_demo_test"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
