feat：optimize toast message

--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_choosed_song_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_choosed_song_list.xml
@@ -98,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_to_del"
+        android:padding="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -106,8 +107,9 @@
         android:id="@+id/ivToTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="12dp"
         android:src="@mipmap/ic_to_top"
+        android:padding="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivToDel"
         app:layout_constraintTop_toTopOf="parent" />
