--- a/Android/scenes/show/src/main/res/drawable/show_alert_dialog_btn_bg.xml
+++ b/Android/scenes/show/src/main/res/drawable/show_alert_dialog_btn_bg.xml
@@ -9,6 +9,14 @@
         </shape>
     </item>
 
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/black_20_percent"/>
+            <corners android:radius="90dp" />
+            <size android:width="65dp" android:height="30dp" />
+        </shape>
+    </item>
+
     <item>
         <shape android:shape="rectangle">
 
