--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_effectvoice.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_effectvoice.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:strokeColor="@null"
         app:shapeAppearance="@style/ktv_cornerNormalStyle"
+        app:strokeColor="@android:color/transparent"
         android:src="@mipmap/bg_sound_mode_1" />
 
     <TextView
