--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
@@ -32,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:shapeAppearance="@style/ui_widget_roundStyle"
+            app:strokeColor="@android:color/transparent"
             tools:src="@mipmap/ktv_ic_seat"
             />
     </FrameLayout>
