feat: update report dialog

--- a/Android/common/ui-widget/src/main/res/layout/dialog_top_function.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_top_function.xml
@@ -11,31 +11,73 @@
     android:minHeight="200dp">
 
     <LinearLayout
-        android:id="@+id/layout_report"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/bg_full_radius_white_24_b"
-            android:padding="10dp"
-            android:src="@mipmap/icon_report" />
-
-        <TextView
-            android:id="@+id/text_report"
+        <LinearLayout
+            android:id="@+id/layoutReportContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
             android:gravity="center"
-            android:text="@string/report_room"
-            android:textColor="#C6C4DD"
-            android:textSize="12sp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/bg_full_radius_white_24_b"
+                android:padding="10dp"
+                android:src="@drawable/report_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/common_report_content"
+                android:textColor="#C6C4DD"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/layoutReportUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/bg_full_radius_white_24_b"
+                android:padding="10dp"
+                android:src="@drawable/report_user" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/common_report_user"
+                android:textColor="#C6C4DD"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
