--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_type_layout.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_type_layout.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="84dp"
-    android:paddingTop="6dp"
-    android:paddingBottom="6dp"
+    android:paddingBottom="12dp"
     android:paddingStart="12dp"
     android:paddingEnd="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,8 +15,7 @@
         android:layout_height="match_parent"
         app:cardCornerRadius="12dp"
         app:cardBackgroundColor="@color/bg_color_blue_31"
-        app:cardElevation="0dp"
-        />
+        app:cardElevation="0dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvBackground"
