--- a/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
@@ -5,7 +5,7 @@
     android:id="@+id/superLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/ktv_room_bg"
+    android:background="@drawable/bg_room_living"
     android:clipToPadding="false"
     android:clipChildren="false"
     tools:context=".live.RoomLivingActivity">
