--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_activity_chatroom.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_activity_chatroom.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/voice_img_room_bg"
+    android:background="@drawable/bg_room_living"
     tools:context=".ui.activity.ChatroomLiveActivity">
 
     <io.agora.scene.voice.spatial.ui.widget.top.RoomLiveTopView
