[Android][Show]1.add disconnect tip of creating and joining room;2.perfect sync manager login retry logic.

--- a/Android/scenes/show/src/main/res/layout/show_living_end_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_living_end_dialog.xml
@@ -13,10 +13,12 @@
     android:theme="@style/Theme.Material3.Dark">
 
     <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/show_living_end_title"
         android:textColor="#040A25"
+        android:gravity="center"
         android:textSize="18sp" />
 
     <com.google.android.material.imageview.ShapeableImageView
