feat：add room game page

--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_item_room_list.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_item_room_list.xml
@@ -32,6 +32,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivLock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@mipmap/ic_online_list_lock"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvGameTag"
                 android:layout_width="wrap_content"
