--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
@@ -86,19 +86,28 @@
                 app:layout_constraintStart_toEndOf="@+id/tvRoomId"
                 app:layout_constraintTop_toTopOf="@id/tvRoomId" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivNetStatus"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/bg_round_green"
+                app:layout_constraintBottom_toBottomOf="@id/tvTimer"
+                app:layout_constraintStart_toEndOf="@id/tvRoomId"
+                android:layout_marginStart="11dp"
+                app:layout_constraintTop_toTopOf="@id/tvTimer" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvTimer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="11dp"
-                android:drawableStart="@drawable/play_zone_live_top_green_dot"
-                android:drawablePadding="4dp"
+                android:layout_marginStart="3dp"
                 android:gravity="center"
                 android:maxLines="1"
                 android:paddingEnd="8dp"
                 android:textColor="@color/white_80_percent"
                 android:textSize="13sp"
-                app:layout_constraintStart_toEndOf="@id/tvRoomId"
+                app:layout_constraintStart_toEndOf="@id/ivNetStatus"
                 app:layout_constraintTop_toBottomOf="@id/tvRoomName"
                 tools:text="00:00:00" />
         </androidx.constraintlayout.widget.ConstraintLayout>
