--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
@@ -238,6 +238,8 @@
             android:checked="true"
             android:gravity="center"
             android:padding="5dp"
+            android:layout_marginEnd="12dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -245,12 +247,13 @@
             android:id="@+id/ivAddBot"
             android:layout_width="38dp"
             android:layout_height="38dp"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginEnd="12dp"
             android:background="@drawable/play_zone_ic_bot"
             android:button="@null"
             android:checked="true"
             android:gravity="center"
             android:padding="5dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
