--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_room_game_layout.xml
@@ -127,9 +127,9 @@
             android:text="@string/play_zone_game_rules"
             android:textColor="@color/white"
             android:textSize="12sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/clRoomTitle"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@id/clRoomTitle" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivMore"
@@ -239,7 +239,6 @@
             android:gravity="center"
             android:padding="5dp"
             android:layout_marginEnd="12dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
