--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_item_room_list.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_item_room_list.xml
@@ -65,6 +65,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:strokeColor="@android:color/transparent"
                 app:shapeAppearance="@style/play_zone_widget_roundStyle" />
 
             <androidx.appcompat.widget.AppCompatTextView
