--- a/Android/IMKitManager/src/main/res/layout/aui_chat_list_layout.xml
+++ b/Android/IMKitManager/src/main/res/layout/aui_chat_list_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="?attr/aui_chatListView_appearance"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="9dp"
@@ -11,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:requiresFadingEdge="vertical"
+        app:aui_interceptTouchEvent="?attr/aui_chatListView_interceptTouchEvent"
         android:fadingEdgeLength="100dp" />
 
 </RelativeLayout>
