--- a/Android/IMKitManager/src/main/res/layout/aui_chat_list_msgs_item.xml
+++ b/Android/IMKitManager/src/main/res/layout/aui_chat_list_msgs_item.xml
@@ -7,10 +7,8 @@
     android:theme="?attr/aui_chatListView_appearance"
     android:background="?attr/aui_barrage_normal_layout_bg"
     android:layout_marginHorizontal="15dp"
-    android:paddingTop="9dp"
-    android:paddingBottom="9dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:paddingVertical="9dp"
+    android:paddingHorizontal="12dp">
 
     <TextView
         android:id="@+id/content"
