--- a/Android/IMKitManager/src/main/res/values/styles.xml
+++ b/Android/IMKitManager/src/main/res/values/styles.xml
@@ -9,11 +9,11 @@
     <style name="AUIChatListView.Appearance">
 
         <item name="aui_barrage_normal_title_tag_icon">@drawable/aui_icon_owner</item>
-        <item name="aui_barrage_normal_title_TextColor">@color/aui_color_8bb3ff</item>
+        <item name="aui_barrage_normal_title_TextColor">@color/aui_default_blue</item>
         <item name="aui_barrage_normal_content_TextColor">@color/aui_white</item>
         <item name="aui_barrage_normal_layout_bg">@drawable/aui_bg_barrage_shape</item>
 
-        <item name="aui_barrage_system_title_TextColor">@color/aui_color_8bb3ff</item>
+        <item name="aui_barrage_system_title_TextColor">@color/aui_default_blue</item>
         <item name="aui_barrage_system_content_TextColor">@color/aui_color_fcf0b3</item>
         <item name="aui_barrage_system_endIcon_resource">@drawable/aui_icon_shaking_hand</item>
         <item name="aui_barrage_system_layout_bg">@drawable/aui_bg_barrage_system_shape</item>
