--- a/Android/IMKitManager/src/main/res/values/attrs.xml
+++ b/Android/IMKitManager/src/main/res/values/attrs.xml
@@ -37,16 +37,20 @@
     <declare-styleable name="AUIChatListView">
         <attr name="aui_chatListView_appearance"/>
 
+        <!--    普通消息样式    -->
         <attr name="aui_barrage_normal_title_tag_icon" format="reference"/>
         <attr name="aui_barrage_normal_title_TextColor" format="reference|color"/>
         <attr name="aui_barrage_normal_content_TextColor" format="reference|color"/>
         <attr name="aui_barrage_normal_layout_bg" format="reference|color"/>
+        <!--    系统消息样式    -->
         <attr name="aui_barrage_system_title_TextColor" format="reference|color"/>
         <attr name="aui_barrage_system_content_TextColor" format="reference|color"/>
         <attr name="aui_barrage_system_endIcon_resource" format="reference"/>
         <attr name="aui_barrage_system_layout_bg" format="reference|color"/>
+        <!--    本地消息样式    -->
         <attr name="aui_barrage_local_content_TextColor" format="reference|color"/>
         <attr name="aui_barrage_local_layout_bg" format="reference|color"/>
+        <!--    聊天消息列表是否可以穿透    -->
         <attr name="aui_chatListView_interceptTouchEvent">
             <enum name="super_intercept" value="0" />
             <enum name="intercept" value="1" />
