--- a/Android/IMKitManager/src/main/res/layout/aui_chat_list_local_msgs_item.xml
+++ b/Android/IMKitManager/src/main/res/layout/aui_chat_list_local_msgs_item.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:theme="?attr/aui_chatListView_appearance"
-    android:background="?attr/aui_barrage_local_layout_bg"
-    android:gravity="center_vertical"
     android:layout_marginHorizontal="15dp"
-    android:paddingVertical="9dp"
-    android:paddingHorizontal="12dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingHorizontal="12dp"
+    android:paddingVertical="9dp">
 
     <TextView
         android:id="@+id/content"
-        android:layout_marginStart="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:textSize="14sp"
         android:textStyle="bold"
-        tools:text="xxx 加入游戏"
-        android:textColor="?attr/aui_barrage_local_content_TextColor" />
+        tools:text="xxx 加入游戏" />
 </LinearLayout>
