--- a/Android/IMKitManager/src/main/res/values/attrs.xml
+++ b/Android/IMKitManager/src/main/res/values/attrs.xml
@@ -12,18 +12,6 @@
         <attr name="android:orientation"/>
     </declare-styleable>
 
-
-    <style name="AUIRecyclerView">
-        <item name="aui_spaceHorizontal">0dp</item>
-        <item name="aui_spaceVertical">0dp</item>
-        <item name="aui_listDivider">@null</item>
-        <item name="aui_interceptTouchEvent">super_intercept</item>
-        <item name="android:orientation">vertical</item>
-    </style>
-
-    <!--================= 主题属性 =================-->
-    <attr name="aui_chatListView_appearance" format="reference"/>
-
     <declare-styleable name="aui_SubtitleView">
         <attr name="voice_customScrollSpeed">
             <enum name="fast" value="9" />
@@ -33,10 +21,7 @@
         <attr name="voice_setSubtitleBgResource" format="reference"/>
     </declare-styleable>
 
-
     <declare-styleable name="AUIChatListView">
-        <attr name="aui_chatListView_appearance"/>
-
         <!--    普通消息样式    -->
         <attr name="aui_barrage_normal_title_tag_icon" format="reference"/>
         <attr name="aui_barrage_normal_title_TextColor" format="reference|color"/>
@@ -50,8 +35,8 @@
         <!--    本地消息样式    -->
         <attr name="aui_barrage_local_content_TextColor" format="reference|color"/>
         <attr name="aui_barrage_local_layout_bg" format="reference|color"/>
-        <!--    聊天消息列表是否可以穿透    -->
-        <attr name="aui_chatListView_interceptTouchEvent">
+        <!--    聊天消息列表item是否可以穿透    -->
+        <attr name="aui_barrage_interceptTouchEvent">
             <enum name="super_intercept" value="0" />
             <enum name="intercept" value="1" />
             <enum name="non_intercept" value="2" />
