feat：imkit remove orhanobut logger

--- a/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_game_hall_layout.xml
+++ b/Android/scenes/play_zone/src/main/res/layout/play_zone_activity_game_hall_layout.xml
@@ -44,6 +44,8 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginStart="14dp"
+                    app:shapeAppearance="@style/play_zone_roundStyle_16"
+                    app:strokeColor="@android:color/transparent"
                     android:src="@drawable/play_zone_ic_the_hottest"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
