--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
@@ -30,11 +30,22 @@
             android:layout_gravity="center">
 
             <FrameLayout
-                android:id="@+id/iBroadcasterAView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
+
+                <FrameLayout
+                    android:id="@+id/iBroadcasterAView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
+
+                <View
+                    android:id="@+id/iBroadcasterAViewOverlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
 
                 <TextView
                     android:id="@+id/userNameA"
@@ -51,10 +62,21 @@
             </FrameLayout>
 
             <FrameLayout
-                android:id="@+id/iBroadcasterBView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
+                <FrameLayout
+                    android:id="@+id/iBroadcasterBView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
+
+                <View
+                    android:id="@+id/iBroadcasterBViewOverlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
 
                 <TextView
                     android:id="@+id/userNameB"
