--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -6,11 +6,26 @@
     android:layout_height="163dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="20dp"
-        app:cardBackgroundColor="@color/show_view" />
+        app:cardBackgroundColor="@color/show_view" >
+
+        <FrameLayout
+            android:id="@+id/video_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/show_room_default_bg"/>
+
+        <View
+            android:id="@+id/video_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="@mipmap/show_room_default_bg"/>
+
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/userName"
