--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
@@ -56,6 +56,7 @@
                     android:textSize="12sp"
                     android:layout_marginBottom="20dp"
                     android:layout_gravity="bottom|center_horizontal"
+                    android:drawableEnd="@drawable/show_mic_bg"
                     android:textColor="@color/white"/>
 
 
@@ -86,6 +87,7 @@
                     android:text="@string/show_pk"
                     android:textSize="12sp"
                     android:layout_marginBottom="20dp"
+                    android:drawableEnd="@drawable/show_mic_bg"
                     android:layout_gravity="bottom|center_horizontal"
                     android:textColor="@color/white"/>
             </FrameLayout>
