--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -42,6 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:singleLine="true"
         tools:text="1212344556"
+        android:drawableEnd="@drawable/show_mic_bg"
         android:textColor="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
