Dev/all 5.0.0 issues 984 985 bugfix android (#999)
* [Android][Show]add overlay view for linking and pk.

* [Android][Show]add mic icon and update mic statue by rtc event.

* [Android][Show]fix virtual bg close ui bug.

* [Android][Show]adjust linking dot display logic, fix apply bug and etc.

* [Android][Show]fix linking layout z order bug.

* [Android][Show]1.implement audio mixing by another uid channel instead of same channel; 2.try to fix mic apply error tip.

* [Android][Show]perfect beauty open icon.

--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -6,11 +6,26 @@
     android:layout_height="163dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="20dp"
-        app:cardBackgroundColor="@color/show_view" />
+        app:cardBackgroundColor="@color/show_view" >
+
+        <FrameLayout
+            android:id="@+id/video_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/show_room_default_bg"/>
+
+        <View
+            android:id="@+id/video_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="@mipmap/show_room_default_bg"/>
+
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/userName"
@@ -27,6 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:singleLine="true"
         tools:text="1212344556"
+        android:drawableEnd="@drawable/show_mic_bg"
         android:textColor="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
