--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
@@ -30,11 +30,22 @@
             android:layout_gravity="center">
 
             <FrameLayout
-                android:id="@+id/iBroadcasterAView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
+
+                <FrameLayout
+                    android:id="@+id/iBroadcasterAView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
+
+                <View
+                    android:id="@+id/iBroadcasterAViewOverlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
 
                 <TextView
                     android:id="@+id/userNameA"
@@ -45,16 +56,28 @@
                     android:textSize="12sp"
                     android:layout_marginBottom="20dp"
                     android:layout_gravity="bottom|center_horizontal"
+                    android:drawableEnd="@drawable/show_mic_bg"
                     android:textColor="@color/white"/>
 
 
             </FrameLayout>
 
             <FrameLayout
-                android:id="@+id/iBroadcasterBView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
+                <FrameLayout
+                    android:id="@+id/iBroadcasterBView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
+
+                <View
+                    android:id="@+id/iBroadcasterBViewOverlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/show_room_default_bg"/>
 
                 <TextView
                     android:id="@+id/userNameB"
@@ -64,6 +87,7 @@
                     android:text="@string/show_pk"
                     android:textSize="12sp"
                     android:layout_marginBottom="20dp"
+                    android:drawableEnd="@drawable/show_mic_bg"
                     android:layout_gravity="bottom|center_horizontal"
                     android:textColor="@color/white"/>
             </FrameLayout>
