--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_draggable_view.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_draggable_view.xml
@@ -25,4 +25,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <io.agora.scene.showTo1v1.ui.view.CallComeSoonView
+        android:id="@+id/comeSoonView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
