--- a/Android/common/base/src/main/res/values/themes.xml
+++ b/Android/common/base/src/main/res/values/themes.xml
@@ -10,4 +10,13 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="base_bottom_full_dialog" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimAmount">0</item>
+        <item name="enableEdgeToEdge">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="behavior_peekHeight">0dp</item>
+    </style>
 </resources>
