[Feat][AiChat] add custom alertdialog

--- a/Android/scenes/aichat/src/main/res/values/themes.xml
+++ b/Android/scenes/aichat/src/main/res/values/themes.xml
@@ -31,4 +31,14 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/def_text_grey_6c7</item>
     </style>
+
+    <style name="aichat_alert_dialog" parent="Theme.MaterialComponents.Dialog.FixedSize.Bridge">
+        <item name="alertDialogStyle">@style/aichat_alert_dialog_style</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="enableEdgeToEdge">true</item>
+    </style>
+
+    <style name="aichat_alert_dialog_style" parent="MaterialAlertDialog.Material3">
+        <item name="android:layout">@layout/aichat_alert_dialog_layout</item>
+    </style>
 </resources>
