--- a/Android/scenes/aichat/src/main/res/layout/aichat_create_agent_dialog.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_create_agent_dialog.xml
@@ -235,7 +235,8 @@
                 android:gravity="start|top"
                 android:textColor="#303553"
                 android:imeOptions="actionDone"
-                android:inputType="text"
+                android:inputType="textMultiLine"
+                android:lines="99"
                 app:layout_constraintTop_toBottomOf="@+id/tv_aichat_create_description"
                 app:layout_constraintStart_toStartOf="@+id/cv_aichat_create_description"
                 app:layout_constraintEnd_toEndOf="@+id/cv_aichat_create_description"
@@ -259,7 +260,7 @@
             <View
                 android:id="@+id/v_aichat_create_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/cv_aichat_create_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
