--- a/Android/scenes/aichat/src/main/res/layout/aichat_create_agent_dialog.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_create_agent_dialog.xml
@@ -53,6 +53,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginTop="30dp"
+                android:src="@drawable/aichat_agint_avatar_1"
                 app:shapeAppearanceOverlay="@style/ui_widget_roundStyle"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
