--- a/Android/scenes/aichat/src/main/res/layout/aichat_double_overlay_imageview.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_double_overlay_imageview.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="64dp"
-    android:layout_height="64dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintDimensionRatio="1:1">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal25"
